remove git commands

--- a/Sales_Data.ipynb
+++ b/Sales_Data.ipynb
@@ -1727,24 +1727,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "45a66b4f-5327-4bee-9ee0-b3b9b36ed0e8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "fatal: not a git repository (or any of the parent directories): .git\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git status"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 90,
    "id": "c296ded7-6393-490a-89d1-f93a666c706d",
    "metadata": {},
@@ -1792,13 +1774,204 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "id": "5b980c89-99ef-4f51-9db7-59c2a480ed63",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "error: remote origin already exists.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git remote add origin https://github.com/vishwajeet-yaduraj/Sales-Data-Analysis.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "c42f2dcc-5540-445c-a61d-f195f4543a29",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git "
+    "!git branch -M main"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "bad7a2fd-abff-4114-bdd5-bdcbf52a9709",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "branch 'main' set up to track 'origin/main'."
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/vishwajeet-yaduraj/Sales-Data-Analysis.git\n",
+      " * [new branch]      main -> main\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push -u origin main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "1a93469a-8ab1-443f-a3ef-45620658201f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch main\n",
+      "\n",
+      "No commits yet\n",
+      "\n",
+      "Untracked files:\n",
+      "  (use \"git add <file>...\" to include in what will be committed)\n",
+      "\t.ipynb_checkpoints/\n",
+      "\tSales_Data.ipynb\n",
+      "\tSales_Data/\n",
+      "\tall_data.csv\n",
+      "\n",
+      "nothing added to commit but untracked files present (use \"git add\" to track)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "cb914f1a-5346-44e7-b291-7af17ed04aa9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: in the working copy of '.ipynb_checkpoints/Sales_Data-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Sales_Data.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Sales_Data/Sales_August_2019.csv', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Sales_Data/Sales_December_2019.csv', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Sales_Data/Sales_February_2019.csv', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Sales_Data/Sales_January_2019.csv', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Sales_Data/Sales_July_2019.csv', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Sales_Data/Sales_June_2019.csv', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Sales_Data/Sales_March_2019.csv', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Sales_Data/Sales_May_2019.csv', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Sales_Data/Sales_November_2019.csv', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Sales_Data/Sales_October_2019.csv', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Sales_Data/Sales_September_2019.csv', LF will be replaced by CRLF the next time Git touches it\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git add ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "78fb0549-5f7f-44ed-8c38-b47d547674a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch main\n",
+      "\n",
+      "No commits yet\n",
+      "\n",
+      "Changes to be committed:\n",
+      "  (use \"git rm --cached <file>...\" to unstage)\n",
+      "\tnew file:   .ipynb_checkpoints/Sales_Data-checkpoint.ipynb\n",
+      "\tnew file:   Sales_Data.ipynb\n",
+      "\tnew file:   Sales_Data/Sales_April_2019.csv\n",
+      "\tnew file:   Sales_Data/Sales_August_2019.csv\n",
+      "\tnew file:   Sales_Data/Sales_December_2019.csv\n",
+      "\tnew file:   Sales_Data/Sales_February_2019.csv\n",
+      "\tnew file:   Sales_Data/Sales_January_2019.csv\n",
+      "\tnew file:   Sales_Data/Sales_July_2019.csv\n",
+      "\tnew file:   Sales_Data/Sales_June_2019.csv\n",
+      "\tnew file:   Sales_Data/Sales_March_2019.csv\n",
+      "\tnew file:   Sales_Data/Sales_May_2019.csv\n",
+      "\tnew file:   Sales_Data/Sales_November_2019.csv\n",
+      "\tnew file:   Sales_Data/Sales_October_2019.csv\n",
+      "\tnew file:   Sales_Data/Sales_September_2019.csv\n",
+      "\tnew file:   all_data.csv\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "61249677-3bce-4241-bc27-ab33ce882d13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main (root-commit) 1e33122] first commit\n",
+      " 15 files changed, 375542 insertions(+)\n",
+      " create mode 100644 .ipynb_checkpoints/Sales_Data-checkpoint.ipynb\n",
+      " create mode 100644 Sales_Data.ipynb\n",
+      " create mode 100644 Sales_Data/Sales_April_2019.csv\n",
+      " create mode 100644 Sales_Data/Sales_August_2019.csv\n",
+      " create mode 100644 Sales_Data/Sales_December_2019.csv\n",
+      " create mode 100644 Sales_Data/Sales_February_2019.csv\n",
+      " create mode 100644 Sales_Data/Sales_January_2019.csv\n",
+      " create mode 100644 Sales_Data/Sales_July_2019.csv\n",
+      " create mode 100644 Sales_Data/Sales_June_2019.csv\n",
+      " create mode 100644 Sales_Data/Sales_March_2019.csv\n",
+      " create mode 100644 Sales_Data/Sales_May_2019.csv\n",
+      " create mode 100644 Sales_Data/Sales_November_2019.csv\n",
+      " create mode 100644 Sales_Data/Sales_October_2019.csv\n",
+      " create mode 100644 Sales_Data/Sales_September_2019.csv\n",
+      " create mode 100644 all_data.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git commit -m \"first commit\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42f37612-72d5-474d-a48c-66afa3bec196",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
